[package]
name = "saddle-world-hex-grid"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-world-hex-grid"
license = "MIT-0"
description = "Hexagonal grid coordinates, layouts, iterators, and pathfinding for Bevy"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
