[workspace]
members = [
    "support",
    "basic",
    "layouts",
    "ranges",
    "pathfinding",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-world-hex-grid = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
