[workspace]
members = [
    "support",
    "basic",
    "layouts",
    "ranges",
    "pathfinding",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-world-hex-grid = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
